--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
           <form action="/search" method="get" class="contact">
             <input type="search" placeholder="Search Customers..." id="search_customers">
           </form>
-            <input type="button" value="" id="scan">
+          <input type="button" value="" id="scan">
         </div>
       </div>
+      <h1 class="small-header">PHPMIXBILL</h1>
         <div class="header-2">
           <div class="logout">
             <input type="button" value="" id="scan" style="width: 20px;">  
@@ -89,7 +90,7 @@
     <div class="container">
       <div class="box-1">
         <div class="balance">
-          <h2 class="income" id="income-1">0</h2>
+          <h2 class="income" id="income-1">0 TK</h2>
           <p>Income Today</p>
         </div>
         <div class="icon"><img src="./icon/price.png" alt="" style="width: 50px;"></div>
@@ -101,7 +102,7 @@
     <div class="container">
       <div class="box-1">
         <div class="balance">
-          <h2 class="income" id="income-2">0</h2>
+          <h2 class="income" id="income-2">0 TK</h2>
           <p>Income This Month</p>
         </div>
         <div class="icon"><img src="./icon/money.png" alt="" style="width: 50px;"></div>
