--- a/daily-reports.html
+++ b/daily-reports.html
@@ -1,8 +1,9 @@
-<html lang="en">
+<html lang="en"></html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="sub-menu2.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -151,110 +152,31 @@
 
     <div class="sticky-header">0</div>
     
-    <!-- Container 1 -->
-  <div class="container-1" id="container">
-    <div class="container">
-      <div class="box-1">
-        <div class="balance">
-          <h2 class="income" id="income-1">0 TK</h2>
-          <p>Income Today</p>
-        </div>
-        <div class="icon"><img src="./icon/price.png" alt="" style="width: 50px;"></div>
-      </div>
-      <div class="box-2" id="box_container-1">
-        <a href="#">View Reports</a>
-      </div>
-    </div>
-    <div class="container">
-      <div class="box-1">
-        <div class="balance">
-          <h2 class="income" id="income-2">0 TK</h2>
-          <p>Income This Month</p>
-        </div>
-        <div class="icon"><img src="./icon/money.png" alt="" style="width: 50px;"></div>
-      </div>
-      <div class="box-2" id="box_container-2">
-        <a href="#">View Reports</a>
-      </div>
-    </div>
-    <div class="container">
-      <div class="box-1">
-        <div class="balance">
-          <h2 class="income" id="income-3">0</h2>
-          <p>Users Active</p>
-        </div>
-        <div class="icon"><img src="./icon/person.png" alt="" style="width: 50px;"></div>
-      </div>
-      <div class="box-2" id="box_container-3">
-        <a href="#">View Reports</a>
-      </div>
-    </div>
-    <div class="container">
-      <div class="box-1">
-        <div class="balance">
-          <h2 class="income" id="income-4">0</h2>
-          <p>Total Users</p>
-        </div>
-        <div class="icon"><img src="./icon/people.png" alt="" style="width: 50px;"></div>
-      </div>
-      <div class="box-2" id="box_container-4">
-        <a href="#">View Reports</a>
-      </div>
-    </div>
+  <div class="form">
+  <div class="header">
+    <p>PERIOD REPORTS</p>
   </div>
-
-<!-- Container-2 -->
-<div class="container-2" id="container">
-  <div class="box-table-1">
-    <div class="box-21" id="box-21">
-      <h2>VOUCHERS STOCK</h2>
-      <table class="table-1">
-        <thead>
-          <tr>
-            <th>Plan Name</th>
-            <th>Unused</th>
-            <th>Used</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Total</td>
-            <td>0</td>
-            <td>0</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="box-21" id="box-22">
-      <h2>USER EXPIRED, TODAY</h2>
-      <table class="table-2">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Username</th>
-            <th>Created On</th>
-            <th>Expires On</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <form action="#" method="post">
+  <div class="input">
+    <label for="username">From Date</label>
+    <input type="date" name="" id="from-date" placeholder="" required>
   </div>
-  <div class="box-table-2">
-    <div class="box-22" id="box-22"><h2>PAYMENT GATEWAY: NONE</h2></div>
-    <div class="box-22" id="box-23">
-      <h2>ACTIVITY LOG</h2>
-      <h2 class="box-231">VERSION 6.1.2</h2>
-    </div>
+  <div class="input">
+    <label for="full-name">To Date</label>
+    <input type="date" name="" id="to-datedate" placeholder="" required>
   </div>
-</div>
-
+  <div class="input">
+    <label for="message">Type</label>
+    <select name="transaction" id="transaction-option">
+      <option value="All-Transactions">All Transactions</option>
+      <option value="All-Transactions">Hotspot</option>
+      <option value="All-Transactions">PPPOE</option>
+    </select>
+  </div>
+  <div class="submit">
+    <input type="submit" value="Period Reports" id="period-reports">
+  </div>
+  </form>
+  </div>
 </body>
 </html>
