--- a/index.html
+++ b/index.html
@@ -249,10 +249,79 @@
   </div>
   <div class="box-table-2">
     <div class="box-22" id="box-22"><h2>PAYMENT GATEWAY: NONE</h2></div>
-    <div class="box-22" id="box-23">
+    <div class="box-23" id="box-23">
       <h2>ACTIVITY LOG</h2>
-      <h2 class="box-231">VERSION 6.1.2</h2>
-    </div>
+
+      <div class="data-activity">
+        <div class="flex-log-1">
+          <div class="bullet-log">
+            <span class="line-top"></span>
+            <span class="bullet"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+        <div class="flex-log-2">
+          <div class="data-log">
+            <div id="time-log">just now</div>
+            <div id="activity-log">admin Login Successfull</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="data-activity2">
+        <div class="flex-log-1">
+          <div class="bullet-log">
+            <span class="bullet"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+        <div class="flex-log-2">
+          <div class="data-log">
+            <div id="time-log">56 minutes, 32 seconds ago</div>
+            <div id="activity-log">admin Login Successfull</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="data-activity2">
+        <div class="flex-log-1">
+          <div class="bullet-log">
+            <span class="bullet"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+        <div class="flex-log-2">
+          <div id="time-log">4 hours, 15 minutes, 40 seconds ago</div>
+          <div id="activity-log">admin Login Successfull</div>
+        </div>
+      </div>
+
+      <div class="data-activity2">
+        <div class="flex-log-1">
+          <div class="bullet-log">
+            <span class="bullet"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+        <div class="flex-log-2">
+          <div id="time-log">6 hours, 49 minutes, 54 seconds ago</div>
+            <div id="activity-log">admin Login Successfull</div>
+        </div>
+      </div>
+
+      <div class="data-activity2">
+        <div class="flex-log-1">
+          <div class="bullet-log">
+            <span class="bullet"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+        <div class="flex-log-2">
+          <div id="time-log">11 hours, 59 minutes, 54 seconds ago</div>
+            <div id="activity-log">admin Login Successfull</div>
+        </div>
+      </div>
+      <h2 class="box-231">VERSION 6.1.2</h2>    </div>
   </div>
 </div>
 
